# PySysInfo

./: .gitignore  CHANGELOG.md  ExtractData.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: coverage-report.yml
core/hardware/: armcpu.py  audio.py  gpu.py  input.py  memory.py  network.py  storage.py  x86cpu.py
core/helper/: ioreg.py
core/managers/: armcpu.py  audio.py  base.py  cpu.py  gpu.py  input.py  memory.py  network.py  storage.py  x86cpu.py
lib/core/hardware/: gpu.py  memory.py
lib/core/helper/: hda_list.py
lib/core/managers/: armcpu.py  audio.py  baseboard.py  gpu.py  input.py  memory.py  network.py  storage.py  x86cpu.py
lib/util/: gpus.py  input.py  memory_type.py  storage_type.py  util.py
pysi/: main.py
pysi/core/hardware/: armcpu.py  audio.py  baseboard.py  gpu.py  input.py  memory.py  network.py  storage.py
pysi/core/helper/: cpuid_feat.py  cpuid_win.py  ioreg.py
pysi/core/managers/: armcpu.py  audio.py  base.py  baseboard.py  gpu.py  input.py  memory.py  network.py  storage.py  x86cpu.py
pysi/interops/cfgmgr32/util/: get_info.py
pysi/tests/: audio.py  baseboard.py  gpu.py  input.py  memory.py  network.py  run_all.py  storage.py  x86cpu.py
pysi/util/: input.py  util.py
tests/: test_armcpu.py  test_audio.py  test_baseboard.py  test_gpu.py  test_input.py  test_memory.py  test_network.py  test_storage.py  test_x86cpu.py  x86cpu.py
util/: util.py
